--- a/additional_addons/magicemart/wizard/m8_print_report.xml
+++ b/additional_addons/magicemart/wizard/m8_print_report.xml
@@ -100,7 +100,7 @@
                 </form>
             </field>
         </record>
-        <act_window name="Customer Invoice" res_model="print.reportwiz"
+        <act_window name="Sales Invoice" res_model="print.reportwiz"
             src_model="account.invoice" view_mode="form" target="new" 
             key2="client_print_multi" id="action_customer_invoice"/>
         
@@ -128,7 +128,7 @@
                 </form>
             </field>
         </record>
-        <act_window name="Customer Invoice1" res_model="print.reportwiz"
+        <act_window name="Sales Invoice1" res_model="print.reportwiz"
             src_model="account.invoice" view_mode="form" target="new" 
             key2="client_print_multi" id="action_customer_invoice1"/>
         
