--- a/additional_addons/magicemart/views/m8_saleweb.xml
+++ b/additional_addons/magicemart/views/m8_saleweb.xml
@@ -155,7 +155,7 @@
                 <select name="company" id="company_select" class="form-control">
                     <option selected="selected" value=""></option>
                     <t t-foreach="company_id" t-as="company">
-                        <option t-att-value = 'company.id'><t t-esc="company.name"/></option>
+                        <option t-att-value="company.id"><t t-esc="company.name[company.name.find('(' )+1:company.name.find(')' )]"/></option>
                         </t>
                 </select>
                 <br/>
@@ -164,22 +164,12 @@
         </template>
        
        
-<!--       
-        
-        
-                    <xpath expr="//div[@class='form-group field-confirm_password']" position="after">
-                <label>Select City</label>
-                <select name="db_id" id="company_select" required="required" class="form-control">
-                    <option selected="selected" value=""/>
-                        <t t-foreach="company_id" t-as="company">
-                            <option t-att-value="company.id"><t t-esc="company.name"/></option>
-
-                        </t>
-                </select>
-<br/>
+<!--<!-\-       Favicon Image-\->
+        <template id="magicecommerce_layout" name="Magicecommerce Layout" inherit_id="web.layout">
+            <xpath expr="//head//link[@href='/web/static/src/img/favicon.ico']" position="replace">
+                <link href="/magicemart/static/src/img/favicon.png" type="image/x-icon" rel="shortcut icon"/>
             </xpath>
-        
-        -->
+        </template>       -->
        
     </data>
 </openerp>
