--- a/additional_addons/magicemart/views/m8_saleweb.xml
+++ b/additional_addons/magicemart/views/m8_saleweb.xml
@@ -164,12 +164,12 @@
         </template>
        
        
-<!--<!-\-       Favicon Image-\->
+<!--       Favicon Image-->
         <template id="magicecommerce_layout" name="Magicecommerce Layout" inherit_id="web.layout">
             <xpath expr="//head//link[@href='/web/static/src/img/favicon.ico']" position="replace">
                 <link href="/magicemart/static/src/img/favicon.png" type="image/x-icon" rel="shortcut icon"/>
             </xpath>
-        </template>       -->
+        </template>       
        
     </data>
 </openerp>
